SAK-25357 - Web Content / cannot display pages with spaces (local backport of KNL-1105